--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^16.3.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.0",
     "react-scripts": "1.1.1",
     "react-xml-parser": "^1.0.5",
